# current-cell-matching-project

./: .gitignore  CITATION.cff  LICENSE  MAIN_TABLE_SOURCE_MAP.csv  MAIN_TABLE_SOURCE_MAP_COMPACT.csv  MAIN_TABLE_SOURCE_MAP_EER.csv  MANIFEST.txt  README.md  README_REPLICATION_PACKAGE.md
python/: README.md  README.txt  platform.txt  pyproject.toml  reproduce_main_tables.py  run_all.py  run_baseline.py  run_final_diagnostics.py  run_frontier_policy.py  run_iteration2_extras.py  run_liquid_illiquid.py  run_margin_sufficiency_audit.py  run_nearby_policy_audit.py  run_normalization_robustness.py  run_omitted_support_bounds.py  run_robustness.py  run_wedge_audit.py
python/data/: nchs_2021_total_survival.csv  ssa_2021_unisex_survival.csv
python/logs/: REPLICATION_LOG_MANIFEST.txt
python/outputs/: alternative_normalization_summary.csv  alternative_normalization_table.tex  approximate_integrability_summary.csv  approximate_integrability_table.tex  baseline_calibration_summary.csv  baseline_comparison_summary.csv  baseline_long_horizon_summary.csv  baseline_matching_summary.csv  baseline_net_term_sign_summary.csv  baseline_net_term_sign_table.tex  baseline_results_table.tex  baseline_sensitivity_summary.csv  baseline_sensitivity_table.tex  baseline_wedge_summary.csv  behavioral_thresholds_summary.csv  behavioral_thresholds_table.tex  boundary_kink_trim_summary.csv  component_exposure_compact_table.tex  component_exposure_table_summary.csv  component_graph_exposure_summary.csv  component_graph_exposure_table.tex  discount_schedule_frontier_summary.csv  (+43 more)
python/src/: income.py  (+9 more)
(+1 files in other folders)
