[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-social-discounting-quant"
version = "0.3.0"
description = "Quantitative companion code for Support, Units, and Current-Cell Matching in Social Discounting"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
where = ["src"]
